--- a/flores.html
+++ b/flores.html
@@ -8,8 +8,11 @@
 </head>
 <body class="container">
     <div class="night">
-      <p>FELIZ DIA DAS MULHERES, MINHA GATINHA!!!</p>
-      <p>Uma flor para minha frô.</p>
+      <div class="text">
+        <p>FELIZ DIA DAS MULHERES, MINHA GATINHA!!!</p>
+        <p>Uma flor para minha frô.</p>
+        <div class="heart"></div>
+      </div>
     </div>
     <div class="flowers">
       <div class="flower flower--1">
